Add navbar scroll trigger for color change, hide/show and hero layout

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!--------------- Navbar Section --------------------------------->
-    <header class="header">
+    <header class="header" id="header">
       <div class="navbar">
         <a href="#" class="navbar__logo">AR SHAKIR</a>
         <ul class="navbar__items">
@@ -55,9 +55,39 @@
     </header>
     <!--------------- Hero Section --------------------------------->
     <div class="hero">
-      <div></div>
+      <div class="hero__text">
+        <div class="hero__text__heading">
+          Managing freelance payments has never been easier
+        </div>
+        <div class="hero__text__body">
+          Yet bed any for travelling assistance indulgence unpleasing. Not
+          thoughts all exercise blessing.
+        </div>
+        <div class="hero__text__links">
+          <a href="#" class="hero__text__links__start">Get Started</a>
+          <a href="#" class="hero__text__links__play">
+            <img
+              src="./public/images/hero/play.svg"
+              alt="play button"
+              class="hero__text__links__play__img"
+            />
+            <p>See How It Works</p>
+          </a>
+        </div>
+        <div class="hero__text__checks">
+          <ul></ul>
+        </div>
+      </div>
+      <div class="hero__img">
+        <img
+          class="hero__img__image"
+          src="./public/images/hero/heroCard.svg"
+          alt="card image"
+        />
+      </div>
     </div>
     <footer></footer>
     <script src="./dist/app/hamburger.js"></script>
+    <script src="./dist/app/navbar.js"></script>
   </body>
 </html>
