Add features section

--- a/index.html
+++ b/index.html
@@ -147,11 +147,138 @@
       </div>
     </div>
     <!--------------- Features Section --------------------------------->
-    <div class="features">
-      <div class="features__portfolio"></div>
-      <div class="features__payments"></div>
-      <div class="features__transactions"></div>
+    <div class="feats">
+      <!--------------- Features Portfolio Section --------------------------------->
+
+      <div class="feats__pf">
+        <div class="feats__pf__head">
+          <div class="feats__pf__head__topic">
+            <div class="feats__pf__head__topic__heading">
+              Automated portfolio tracking
+            </div>
+            <div class="feats__pf__head__topic__body">
+              Yet bed any for travelling assistance indulgence unpleasing. Not
+              thoughts all exercise blessing.
+            </div>
+          </div>
+          <div class="feats__pf__head__quote">
+            <img
+              src="./public/images/features/quote.svg"
+              alt=""
+              class="feats__pf__head__quote__img"
+            />
+            <div class="feats__pf__head__quote__text">
+              Wise busy past both park when an ye no. Nay likely her length
+              sooner thrown sex lively income. The expense windows adapted sir.
+              Wrong widen.
+            </div>
+            <div class="feats__pf__head__quote__author">
+              - Mike Taylor, Web Designer
+            </div>
+          </div>
+        </div>
+        <div class="feats__pf__icons">
+          <div class="feats__pf__icons__connect">
+            <p class="feats__pf__icons__connect__no">01</p>
+            <img
+              src="./public/images/features/connect.svg"
+              alt=""
+              class="feats__pf__icons__connect__icon"
+            />
+            <div class="feats__pf__icons__connect__head">
+              Connect wallets & companies
+            </div>
+            <div class="feats__pf__icons__connect__body">
+              Indulgence way everything joy alteration boisterous the
+              attachment. Party we years to order allow asked of.
+            </div>
+          </div>
+          <div class="feats__pf__icons__review">
+            <p class="feats__pf__icons__review__no">02</p>
+            <img
+              src="./public/images/features/review.svg"
+              alt=""
+              class="feats__pf__icons__review__icon"
+            />
+            <div class="feats__pf__icons__review__head">
+              Review transactions
+            </div>
+            <div class="feats__pf__icons__review__body">
+              Indulgence way everything joy alteration boisterous the
+              attachment. Party we years to order allow asked of.
+            </div>
+          </div>
+          <div class="feats__pf__icons__income">
+            <p class="feats__pf__icons__income__no">03</p>
+            <img
+              src="./public/images/features/income.svg"
+              alt=""
+              class="feats__pf__icons__income__icon"
+            />
+            <div class="feats__pf__icons__income__head">
+              Get income insights
+            </div>
+            <div class="feats__pf__icons__income__body">
+              Indulgence way everything joy alteration boisterous the
+              attachment. Party we years to order allow asked of.
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--------------- Features Payments Section --------------------------------->
+      <div class="feats__payments">
+        <img
+          src="./public/images/features/payments.svg"
+          alt=""
+          class="feats__payments__img"
+        />
+        <div class="feats__payments__text">
+          <div class="feats__payments__text__subtitle">WHY CHOOSE US</div>
+          <div class="feats__payments__text__head">
+            Track your payments on the go with the best way possible
+          </div>
+          <div class="feats__payments__text__body">
+            Indulgence way everything joy alteration boisterous the attachment.
+            Party we years to order allow asked of.
+          </div>
+          <div class="feats__payments__text__line"></div>
+          <ul class="feats__payments__text__lists">
+            <li class="feats__payments__text__lists__list">
+              <img
+                src="./public/images/hero/check.svg"
+                alt=""
+                class="feats__payments__text__lists__list__check"
+              />
+              <p>Get Overview at a glance</p>
+            </li>
+            <li class="feats__payments__text__lists__list">
+              <img
+                src="./public/images/hero/check.svg"
+                alt=""
+                class="feats__payments__text__lists__list__check"
+              />
+              <p>Deoposit funds easily, securlity</p>
+            </li>
+            <li class="feats__payments__text__lists__list">
+              <img
+                src="./public/images/hero/check.svg"
+                alt=""
+                class="feats__payments__text__lists__list__check"
+              />
+              <p>Get Live Support</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!--------------- Features Transactions Section --------------------------------->
+      <div class="feats__transactions">
+        <div></div>
+        <img src="./public/images/features/transaction.svg" alt="" />
+      </div>
+      <!--------------- Features Blows Mind Section --------------------------------->
+      <div class="feats__blowsMind"></div>
     </div>
+    <div></div>
     <footer></footer>
     <script src="./dist/app/hamburger.js"></script>
     <script src="./dist/app/navbar.js"></script>
