Add all feature sections

--- a/index.html
+++ b/index.html
@@ -272,11 +272,82 @@
       </div>
       <!--------------- Features Transactions Section --------------------------------->
       <div class="feats__transactions">
-        <div></div>
-        <img src="./public/images/features/transaction.svg" alt="" />
+        <div class="feats__transactions__text">
+          <div class="feats__transactions__text__subtitle">WHY CHOOSE US</div>
+          <div class="feats__transactions__text__head">
+            Save money with proper transaction
+          </div>
+          <div class="feats__transactions__text__body">
+            We so opinion friends me message as delight. Whole front do of plate
+            heard oh ought. His defective nor convinced residence own.
+          </div>
+          <div class="feats__transactions__text__quote">
+            <img
+              src="./public/images/features/quote.svg"
+              alt=""
+              class="feats__transactions__text__quote__img"
+            />
+            <div class="feats__transactions__text__quote__comment">
+              Wise busy past both park when an ye no. Nay likely her length
+              sooner thrown sex lively income. The expense windows .
+            </div>
+            <div class="feats__transactions__text__quote__author">
+              - Mike Taylor, Web Designer
+            </div>
+          </div>
+        </div>
+        <img
+          src="./public/images/features/transaction.svg"
+          alt=""
+          class="feats__transactions__img"
+        />
       </div>
       <!--------------- Features Blows Mind Section --------------------------------->
-      <div class="feats__blowsMind"></div>
+      <div class="feats__blowsMind">
+        <div class="feats__blowsMind__head">Features that blows mind</div>
+        <div class="feats__blowsMind__body">
+          We so opinion friends me message as delight. Whole front do of plate
+          heard oh ought. His defective nor convinced residence own.
+        </div>
+        <div class="feats__blowsMind__icons">
+          <div class="feats__blowsMind__icons__first">
+            <img
+              src="./public/images/features/review.svg"
+              alt=""
+              class="feats__blowsMind__icons__first__img"
+            />
+            <div class="feats__blowsMind__icons__first__head">
+              Really boy law county she unable her sister
+            </div>
+            <div class="feats__blowsMind__icons__first__body">
+              We so opinion friends me message as delight. Whole front do of
+              plate heard oh ought.
+            </div>
+          </div>
+          <div class="feats__blowsMind__icons__second">
+            <img
+              src="./public/images/features/connect.svg"
+              alt=""
+              class="feats__blowsMind__icons__second__img"
+            />
+            <div class="feats__blowsMind__icons__second__head">
+              Among sex are leave law built now
+            </div>
+            <div class="feats__blowsMind__icons__second__body">
+              We so opinion friends me message as delight. Whole front do of
+              plate heard oh ought.
+            </div>
+          </div>
+          <div class="feats__blowsMind__icons__third">
+            <div class="feats__blowsMind__icons__third__top">
+              Merits behind on afraid or warmly
+            </div>
+            <div class="feats__blowsMind__icons__third__bottom">
+              Believing neglected so so allowance existence
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <div></div>
     <footer></footer>
