--- a/index.html
+++ b/index.html
@@ -349,7 +349,137 @@
         </div>
       </div>
     </div>
-    <div></div>
+    <!--------------- Testimonials Section --------------------------------->
+    <div class="tes">
+      <img
+        src="./public/images/testimonials/test.svg"
+        alt=""
+        class="tes__img"
+      />
+      <div class="tes__head">Testimonials</div>
+      <div class="tes__body">
+        We so opinion friends me message as delight. Whole front do of plate
+        heard oh ought. His defective nor convinced residence own.
+      </div>
+      <div class="tes__slider">
+        <!--------------- Testimonials CARD 1 --------------------------------->
+
+        <div class="tes__slider__card1">
+          <img
+            src="./public/images/features/quote.svg"
+            alt=""
+            class="tes__slider__card1__quote"
+          />
+
+          <div class="tes__slider__card1__text">
+            <div class="tes__slider__card1__text__comment">
+              Wise busy past both park when an ye no. Nay likely her length
+              sooner thrown sex lively income. The expense windows . Blessing
+              welcomed ladyship.
+            </div>
+            <div class="tes__slider__card1__text__author">
+              - Mike Taylor, Web Designer
+            </div>
+          </div>
+          <img
+            src="./public/images/testimonials/woman.svg"
+            alt=""
+            class="tes__slider__card1__img"
+          />
+        </div>
+        <!--------------- Testimonials CARD 2 --------------------------------->
+
+        <div class="tes__slider__card2">
+          <img
+            src="./public/images/features/quote.svg"
+            alt=""
+            class="tes__slider__card2__quote"
+          />
+
+          <div class="tes__slider__card2__text">
+            <div class="tes__slider__card2__text__comment">
+              Wise busy past both park when an ye no. Nay likely her length
+              sooner thrown sex lively income. The expense windows . Blessing
+              welcomed ladyship.
+            </div>
+            <div class="tes__slider__card2__text__author">
+              - Mike Taylor, Web Designer
+            </div>
+          </div>
+          <img
+            src="./public/images/testimonials/woman.svg"
+            alt=""
+            class="tes__slider__card2__img"
+          />
+        </div>
+        <!--------------- Testimonials CARD 3 --------------------------------->
+
+        <div class="tes__slider__card3">
+          <img
+            src="./public/images/features/quote.svg"
+            alt=""
+            class="tes__slider__card1__quote"
+          />
+
+          <div class="tes__slider__card1__text">
+            <div class="tes__slider__card1__text__comment">
+              Wise busy past both park when an ye no. Nay likely her length
+              sooner thrown sex lively income. The expense windows . Blessing
+              welcomed ladyship.
+            </div>
+            <div class="tes__slider__card1__text__author">
+              - Mike Taylor, Web Designer
+            </div>
+          </div>
+          <img
+            src="./public/images/testimonials/woman.svg"
+            alt=""
+            class="tes__slider__card3__img"
+          />
+        </div>
+      </div>
+    </div>
+    <!--------------- Statistics Section --------------------------------->
+    <div class="statistics">
+      <div class="statistics__heading">
+        We speak with our powerfull statistics
+      </div>
+      <div class="statistics__line"></div>
+      <div class="statistics__users">
+        <div class="statistics__users__num">1M+</div>
+        <div class="statistics__users__detail">
+          <img
+            src="./public/images/statistics/user.svg"
+            alt=""
+            class="statistics__users__detail__img"
+          />
+          <p class="statistics__users__detail__text">Active Users</p>
+        </div>
+      </div>
+      <div class="statistics__reviews">
+        <div class="statistics__reviews__num">30K+</div>
+        <div class="statistics__reviews__detail">
+          <img
+            src="./public/images/statistics/star.svg"
+            alt=""
+            class="statistics__reviews__detail__img"
+          />
+
+          <p class="statistics__reviews__detail__text">5-Stars Reviews</p>
+        </div>
+      </div>
+      <div class="statistics__transactions">
+        <div class="statistics__transactions__num">$252M</div>
+        <div class="statistics__transactions__detail">
+          <img
+            src="./public/images/statistics/star.svg"
+            alt=""
+            class="statistics__transactions__detail__img"
+          />
+          <p class="statistics__transactions__detail__text">Transactions</p>
+        </div>
+      </div>
+    </div>
     <footer></footer>
     <script src="./dist/app/hamburger.js"></script>
     <script src="./dist/app/navbar.js"></script>
