--- a/index.html
+++ b/index.html
@@ -480,6 +480,71 @@
         </div>
       </div>
     </div>
+    <!--------------- Blogs Section --------------------------------->
+    <div class="blogs">
+      <div class="blogs__head">Recent Blogs</div>
+      <div class="blogs__top">
+        <div class="blogs__top__text">
+          <div class="blogs__top__text__subtitle">BEST PRACTICES</div>
+          <div class="blogs__top__text__heading">
+            In design active temper be uneasy. Thirty for remove plenty regard.
+          </div>
+          <div class="blogs__top__text__readMore">
+            <div class="blogs__top__text__readMore__text">Read More</div>
+            <img
+              src="./public/images/blogs/arrow.svg"
+              alt=""
+              class="blogs__top__text__readMore__img"
+            />
+          </div>
+        </div>
+        <img
+          src="./public/images/blogs/blog1.svg"
+          alt=""
+          class="blogs__top__img"
+        />
+      </div>
+      <div class="blogs__bot">
+        <div class="blogs__bot__first">
+            <div class="blogs__bot__first__text">
+              <div class="blogs__bot__first__text__subtitle">BEST PRACTICES</div>
+              <div class="blogs__bot__first__text__heading">
+                Partiality on or continuing particular principles as.               </div>
+            </div>
+            <img
+              src="./public/images/blogs/blog2.svg"
+              alt=""
+              class="blogs__bot__first__img"
+            />
+          </div>
+        <div class="blogs__bot__second">
+          <div class="blogs__bot__first__text">
+              <div class="blogs__bot__second__text__subtitle">BEST PRACTICES</div>
+              <div class="blogs__bot__second__text__heading">
+                Village did removed enjoyed explain              </div>
+            </div>
+            <img
+              src="./public/images/blogs/blog3.svg"
+              alt=""
+              class="blogs__bot__second__img"
+            />
+        </div>
+        <div class="blogs__bot__third">
+          <div class="blogs__bot__third__text">
+              <div class="blogs__bot__third__text__subtitle">BEST PRACTICES</div>
+              <div class="blogs__bot__third__text__heading">
+                Wise busy past both park when an ye no. Nay likely her length.              </div>
+            </div>
+            <img
+              src="./public/images/blogs/blog4.svg"
+              alt=""
+              class="blogs__bot__third__img"
+            />
+        </div>
+      </div>
+
+      </div>
+    </div>
     <footer></footer>
     <script src="./dist/app/hamburger.js"></script>
     <script src="./dist/app/navbar.js"></script>
