Add FAQ section

--- a/index.html
+++ b/index.html
@@ -542,11 +542,75 @@
             />
         </div>
       </div>
+      </div>
+    </div>
+    <!--------------- FAQ Section --------------------------------->
+    <div class="faq">
+      <div class="faq__head">Fequently asked questions</div>
+      <div class="faq__body">
+        <ul class="faq__body__questions">
+          <li class="faq__body__questions__1" >
+            <div class="faq__body__questions__1__head">
+              <p class="faq__body__questions__1__head__quest">The expense windows adapted sir. Wrong widen drawn.</p>
+              <button class="faq__body__questions__1__head__trigger" >+</button>
+            </div>
+            <p class="faq__body__questions__1__body">
+              Offending belonging promotion provision an be oh consulted ourselves it. Blessing welcomed ladyship she met humoured sir breeding her. 
+            </p>
+          </li>
+          <li class="faq__body__questions__2">
+            <div class="faq__body__questions__2__head">
+              <p class="faq__body__questions__2__head__quest">Six curiosity day assurance bed necessary?</p>
+              <button class="faq__body__questions__2__head__trigger">+</button>
+              </div>
+            <p class="faq__body__questions__2__body">
+              Offending belonging promotion provision an be oh consulted ourselves it. Blessing welcomed ladyship she met humoured sir breeding her. 
+            </p>
+          </li>
+          
+          <li class="faq__body__questions__3">
+            <div class="faq__body__questions__3__head">
+              <p class="faq__body__questions__3__head__quest">Produce say the ten moments parties?</p>
+              <button class="faq__body__questions__3__head__trigger">+</button>
+              </div>
+            <p class="faq__body__questions__3__body">
+              Offending belonging promotion provision an be oh consulted ourselves it. Blessing welcomed ladyship she met humoured sir breeding her. 
+            </p>
+          </li>
+          <li class="faq__body__questions__4">
+            <div class="faq__body__questions__4__head">
+              <p class="faq__body__questions__4__head__quest">Simple innate summer fat appear basket his desire joy?</p>
+              <button class="faq__body__questions__4__head__trigger">+</button>
+              </div>
+            <p class="faq__body__questions__4__body">
+              Offending belonging promotion provision an be oh consulted ourselves it. Blessing welcomed ladyship she met humoured sir breeding her. 
+            </p>
+          </li>
+          <li class="faq__body__questions__5">
+            <div class="faq__body__questions__5__head">
+              <p class="faq__body__questions__5__head__quest">Outward clothes promise at gravity do excited?</p>
+              <button class="faq__body__questions__5__head__trigger">+</button>
+              </div>
+            <p class="faq__body__questions__5__body">
+              Offending belonging promotion provision an be oh consulted ourselves it. Blessing welcomed ladyship she met humoured sir breeding her. 
+            </p>
+          </li>
+        </ul>
+        <div class="faq__body__moreQuest">
+          <div class="faq__body__moreQuest__top">
+
+            <img src="./public/images/FAQ/chat.svg" alt="" class="faq__body__moreQuest__top__img">
+            <div class="faq__body__moreQuest__top__head">Do you have more questions? </div>
+            <p class="faq__body__moreQuest__top__body">End-to-end payments and financial management in a single solution. Meet the right platform to help realize.</p>
+          </div>
+          <a href="#" class="faq__body__moreQuest__mail">Shoot a Direct Mail</a>
+        </div>
 
       </div>
     </div>
     <footer></footer>
     <script src="./dist/app/hamburger.js"></script>
     <script src="./dist/app/navbar.js"></script>
+    <script src="./dist/app/faq.js"></script>
   </body>
 </html>
