Add get started section

--- a/index.html
+++ b/index.html
@@ -549,6 +549,7 @@
       <div class="faq__head">Fequently asked questions</div>
       <div class="faq__body">
         <ul class="faq__body__questions">
+          <!--------------- FAQ 1 --------------------------------->
           <li class="faq__body__questions__1" >
             <div class="faq__body__questions__1__head">
               <p class="faq__body__questions__1__head__quest">The expense windows adapted sir. Wrong widen drawn.</p>
@@ -558,6 +559,8 @@
               Offending belonging promotion provision an be oh consulted ourselves it. Blessing welcomed ladyship she met humoured sir breeding her. 
             </p>
           </li>
+          <!--------------- FAQ 2--------------------------------->
+    
           <li class="faq__body__questions__2">
             <div class="faq__body__questions__2__head">
               <p class="faq__body__questions__2__head__quest">Six curiosity day assurance bed necessary?</p>
@@ -567,7 +570,8 @@
               Offending belonging promotion provision an be oh consulted ourselves it. Blessing welcomed ladyship she met humoured sir breeding her. 
             </p>
           </li>
-          
+          <!--------------- FAQ 3--------------------------------->
+  
           <li class="faq__body__questions__3">
             <div class="faq__body__questions__3__head">
               <p class="faq__body__questions__3__head__quest">Produce say the ten moments parties?</p>
@@ -577,6 +581,8 @@
               Offending belonging promotion provision an be oh consulted ourselves it. Blessing welcomed ladyship she met humoured sir breeding her. 
             </p>
           </li>
+          <!--------------- FAQ 4--------------------------------->
+
           <li class="faq__body__questions__4">
             <div class="faq__body__questions__4__head">
               <p class="faq__body__questions__4__head__quest">Simple innate summer fat appear basket his desire joy?</p>
@@ -586,6 +592,7 @@
               Offending belonging promotion provision an be oh consulted ourselves it. Blessing welcomed ladyship she met humoured sir breeding her. 
             </p>
           </li>
+          <!--------------- FAQ 5--------------------------------->
           <li class="faq__body__questions__5">
             <div class="faq__body__questions__5__head">
               <p class="faq__body__questions__5__head__quest">Outward clothes promise at gravity do excited?</p>
@@ -607,6 +614,17 @@
         </div>
 
       </div>
+    </div>
+
+    <!--------------- GET STARTED SECTION --------------------------------->
+    <div class="started">
+      <div class="started__head">
+        Discover a better way to manage spendings
+
+      </div>
+      <button class="started__button">Get Started Now
+      </button>
+
     </div>
     <footer></footer>
     <script src="./dist/app/hamburger.js"></script>
