--- a/index.html
+++ b/index.html
@@ -626,7 +626,58 @@
       </button>
 
     </div>
-    <footer></footer>
+
+    <!--------------- FOOTER SECTION --------------------------------->
+
+    <footer class="footer">
+      <div class="footer__top">
+
+        <div class="footer__top__about">
+          <p class="footer__top__about__logo">AR Shakir</p>
+          <p class="footer__top__about__text">Finance helps companies manage payments easily.</p>
+          <div class="footer__top__about__socials">
+            <a href="https://www.linkedin.com"><img src="./public/images/footer/linkedin.svg" alt="" class="footer__top__about__socials__linkedin"></a>
+            <a href="https://www.messenger.com"><img src="./public/images/footer/messenger.svg" alt="" class="footer__top__about__socials__messenger"></a>
+            <a href="https://www.twitter.com"><img src="./public/images/footer/twitter.svg" alt="" class="footer__top__about__socials__twitter"></a>
+            <a href="https://www.meta.com"><img src="./public/images/footer/meta.svg" alt="" class="footer__top__about__socials__meta"></a>
+
+          </div>
+
+        </div>
+        <div class="footer__top__company">
+          <p class="footer__top__company__head">Company</p>
+          <ul class="footer__top__company__body">
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Pricing</a></li>
+          </ul>
+        </div>
+        <div class="footer__top__resources"> 
+          <p class="footer__top__resources__head">Resources</p>
+          <ul class="footer__top__resources__body">
+            <li><a href="#">Proposal Template</a></li>
+            <li><a href="#">Invoice Template</a></li>
+            <li><a href="#">Tutorial</a></li>
+            <li><a href="#">How to write a contract</a></li>
+          </ul>
+
+        </div>
+        <div class="footer__top__newsletter">
+          <p class="footer__top__newsletter__head">Join Our Newsletter</p>
+          <div class="footer__top__newsletter__email">
+            <input type="text" placeholder="Your email address" class="footer__top__newsletter__email__input">
+            <button class="footer__top__newsletter__email__sub">Subscribe</button>
+          </div>
+          <p class="footer__top__newsletter__comment">*  Will send you weekly updates for your better
+            finance management.</p>
+        </div>
+      </div>
+    <div class="footer__bot">
+      <p class="footer__bot__copyright">Copyright &copy AR Shakir 2022. All Rights Reserved.</p>
+    </div>
+
+  </footer>
     <script src="./dist/app/hamburger.js"></script>
     <script src="./dist/app/navbar.js"></script>
     <script src="./dist/app/faq.js"></script>
