Make hero responsive

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               alt=""
               class="hero__text__checks__register__img"
             />
-            <p>Free Register</p>
+            <p class="hero__text__checks__register__text">Free Register</p>
           </li>
           <li class="hero__text__checks__service">
             <img
@@ -91,17 +91,15 @@
               alt=""
               class="hero__text__checks__service__img"
             />
-            <p>Great Service</p>
+            <p class="hero__text__checks__service__text">Great Service</p>
           </li>
         </ul>
       </div>
-      <div class="hero__img">
         <img
-          class="hero__img__image"
+          class="hero__img"
           src="./public/images/hero/heroCard.svg"
           alt="card image"
         />
-      </div>
     </div>
     <!--------------- Companies Section --------------------------------->
     <div class="company">
@@ -490,12 +488,13 @@
             In design active temper be uneasy. Thirty for remove plenty regard.
           </div>
           <div class="blogs__top__text__readMore">
-            <div class="blogs__top__text__readMore__text">Read More</div>
+            <a  href="#" class="blogs__top__text__readMore__text">Read More
             <img
               src="./public/images/blogs/arrow.svg"
               alt=""
-              class="blogs__top__text__readMore__img"
+              class="blogs__top__text__readMore__text__img"
             />
+          </a>
           </div>
         </div>
         <img
