Adjust image sizes

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               alt="play button"
               class="hero__text__links__play__img"
             />
-            <p>See How It Works</p>
+            <p class="hero__text__links__play__text">See How It Works</p>
           </a>
         </div>
         <ul class="hero__text__checks">
