Make payments section responsive

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 alt=""
                 class="feats__payments__text__lists__list__check"
               />
-              <p>Get Overview at a glance</p>
+              <p class="feats__payments__text__lists__list__text">Get Overview at a glance</p>
             </li>
             <li class="feats__payments__text__lists__list">
               <img
@@ -264,7 +264,7 @@
                 alt=""
                 class="feats__payments__text__lists__list__check"
               />
-              <p>Deoposit funds easily, securlity</p>
+              <p class="feats__payments__text__lists__list__text">Deoposit funds easily, securlity</p>
             </li>
             <li class="feats__payments__text__lists__list">
               <img
@@ -272,7 +272,7 @@
                 alt=""
                 class="feats__payments__text__lists__list__check"
               />
-              <p>Get Live Support</p>
+              <p class="feats__payments__text__lists__list__text">Get Live Support</p>
             </li>
           </ul>
         </div>
